[package]
name = "bewm"
version = "0.2.0"
authors = ["Jabster28 <justynboyer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
requestty = "0.1.1"
tempfile = "3.2.0"
openssl = { version = '0.10', features = ["vendored"] }
#
[features]
# no features by default
default = []

reverse_shell = []
reproduce = []
busybox = []

[build-dependencies]
http_req = "0.8.1"
openssl = { version = '0.10', features = ["vendored"] }
